<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Book Store Inventory App</string>

    <!-- Label for overflow menu option that inserts a new book into the app [CHAR LIMIT=20] -->
    <string name="add_new_books">Add new Book</string>

    <!-- Label for overflow menu option that inserts a new book into the app [CHAR LIMIT=20] -->
    <string name="edit_book">Edit Book</string>

    <!-- Label for overflow menu option that deletes all books data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Books</string>

    <string name="action_settings">Settings</string>
    <!-- Label for editor menu option to save pet and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current pet [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Title for the activity to add a new Book [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_book">Add a Book</string>

    <!-- Labels [CHAR LIMIT=20] -->
    <string name="new_book">New Book</string>
    <string name="book_name">Book name</string>
    <string name="book_price">Price</string>
    <string name="price_currency">€</string>
    <string name="book_quantity">Quantity</string>
    <string name="book_supplier_name">Supplier Name</string>
    <string name="book_supplier_phone_number">Supplier Phone Number</string>
    <string name="book_stock">in stock</string>
    <string name="bt_minus">-</string>
    <string name="bt_plus">+</string>
    <string name="bt_order">order more</string>
    <string name="bt_sale">sale</string>

    <string name="supplier_unknown">Unknown</string>
    <string name="supplier_penguin">Penguin</string>
    <string name="supplier_pearson">Pearson</string>
    <string name="supplier_leya">Leya</string>

    <!-- Toasts [CHAR LIMIT=20] -->
    <string name="book_added_info">Book added!</string>
    <string name="add_book_name">Add book name</string>
    <string name="add_book_price">Add book price</string>
    <string name="add_book_quantity">Add quantity</string>
    <string name="add_book_supplier_name">Add book supplier</string>
    <string name="add_book_supplier_number">Add book supplier contact phone</string>

    <string name="edit_book_info">You will edit a book.</string>
    <string name="updated_book_info">Book updated!</string>
    <string name="discard_changes_info">Discard changes.</string>

    <string name="cannot_be_empty">This field cannot be empty!</string>
    <string name="delete_error_info">Error when deleting book entry.</string>
    <string name="book_deleted">Book deleted.</string>

    <string name="no_changes_info">No fields were modified.</string>
    <string name="empty_field_error">This field cannot be empty, please enter a valid value!</string>
    <string name="save_error_info">Error while saving book.</string>
    <string name="update_error_info">Error while updating book.</string>

    <!-- activity_book_inventory [CHAR LIMIT=20] -->
    <string name="database_empty_image">Empty database image</string>
    <string name="database_empty_background">Your bookshelf is empty!</string>
    <string name="add_new_book_background">Let\'s fill it up with amazing books!\nStart to press the book button to add a new book</string>


    <string name="row_id">saved with row id </string>
    <string name="save">SAVE</string>
    <string name="blank" />

    <string name="discard">Discard</string>
    <string name="keep_editing">Please keep editing</string>

    <!-- Delete [CHAR LIMIT=20] -->
    <string name="delete_msg">Are you sure you want to delete this book entry?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
</resources>
