<?xml version="1.0" encoding="utf-8"?>
<!-- Layout for the list of books -->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookInventoryActivity">

    <TextView
        style="@style/TextViewBook"
        android:id="@+id/text_view_book"/>

    <ListView
        android:id="@+id/list_all_books"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!-- Empty view for the list -->
    <RelativeLayout
        android:id="@+id/empty_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/empty_database"
            style="@style/empty_database_image_background"
            android:contentDescription="@string/database_empty_image"
            android:src="@drawable/bookshelf" />

        <TextView
            android:id="@+id/empty_title_text"
            style="@style/emptyDatabaseTextTitle"
            android:text="@string/database_empty_background"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:id="@+id/empty_subtitle_text"
            style="@style/emptyDatabaseTextSubtitle"
            android:text="@string/add_new_book_background"
            android:textAlignment="center"
            android:textAppearance="?android:textAppearanceSmall" />
    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        style="@style/FloatingActionButton"
        android:id="@+id/fab" />
</RelativeLayout>